--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "chudooder <codeshawnachu@gmail.com>",
   "dependencies": {
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.1.2",
