--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "babel-preset-stage-0": "^6.1.2",
     "babel-runtime": "^5.8.0",
     "webpack": "^1.12.2",
+    "webpack-dev-server": "2.1.0-beta.10",
     "css-loader": "^0.23.0",
     "style-loader": "^0.13.0",
     "vue-loader": "^7.3.0",
-    "vue-html-loader": "^1.0.0"
+    "vue-html-loader": "^1.0.0",
+    "vue-hot-reload-api": "^1.2.0"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -29,5 +31,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "scripts": {
+    "startdev": "webpack-dev-server --no-inline --hot --watch"
+  }
 }
