--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-stage-0": "^6.1.2",
     "babel-runtime": "^5.8.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "2.1.0-beta.10",
     "css-loader": "^0.23.0",
+    "file-loader": "^1.1.9",
     "style-loader": "^0.13.0",
-    "vue-loader": "^7.3.0",
+    "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
-    "vue-hot-reload-api": "^1.2.0"
+    "vue-loader": "^7.3.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "2.1.0-beta.10"
   },
   "engines": {
     "node": ">= 6.0.0",
