--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.1.2",
-    "babel-loader": "^6.1.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-stage-0": "^6.1.2",
     "babel-runtime": "^5.8.0",
     "css-loader": "^0.23.1",
     "file-loader": "^1.1.9",
     "style-loader": "^0.13.2",
+    "url-loader": "^1.0.1",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^7.3.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "2.1.0-beta.10"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
